<resources>
    <string name="all_groups">All Aquariums</string>
    <string name="color_channels">Color Channels</string>
    <string name="presets">Presets</string>
    <string name="preview_modes">Preview Modes</string>
    <string name="schedule">Schedule</string>
    <string name="sign_out">Sign Out</string>
    <string name="empty_profile">Your EcoSmart Live Profile is Empty</string>
    <string name="info_empty_profile">(add some Radions and try again)</string>
    <string name="warning_not_connect">EcoSmart Live could not connect to your Radions</string>
    <string name="warning_not_connect2">(Please check your connection and try again)</string>
    <string name="warning_no_internet">EcoSmart Live was unable to connect to the Internet</string>
    <string name="warning_no_internet2">(Please check your connection and try again)</string>
    <string name="login">Login</string>
    <string name="invalid_login_title">Incorrect Login</string>
    <string name="invalid_login">The email and password you entered are incorrect. Please try again.</string>
    <string name="username_entry">Email Address</string>
    <string name="password_entry">Password</string>
    <string name="connecting_to_esl">Connecting to EcoSmart Live…</string>
    <string name="save_preset">Save Preset</string>
    <string name="saved">saved.</string>
    <string name="kelvin">Kelvin</string>
    <string name="rgb">RGB</string>
    <string name="slider">Slider</string>
    <string name="uv">UV</string>
    <string name="royal_blue">Royal Blue</string>
    <string name="blue">Blue</string>
    <string name="cool_white">Cool White</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="brightness">Brightness</string>
    <string name="enter_preset_name">Enter a preset name.</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="forgot_preset_name">Please enter a valid preset name.</string>
    <string name="ok">OK</string>
    <string name="default_presets">Default Presets</string>
    <string name="my_presets">My Presets</string>
    <string name="thunderstorms">Thunderstorms</string>
    <string name="demonstration">Demo</string>
    <string name="cloud_cover">Cloud Cover</string>
    <string name="disco_time">Disco Time</string>
    <string name="high_growth">High Growth</string>
    <string name="high_growth_description">&lt;span style=\'font-family:HelveticaNeue;color:black;background-color:rgba(0,0,0,0);font-size:16px;text-align:justify;text-wrap:normal;word-wrap:break-word\'>Beginning the day with a brief period of deep blue to highlight the beauty in your aquarium, then quickly ramping up to maximum intensity; your Radions&lt;sup style=\'font-size:8px\'>TM&lt;/sup> will stay at maximum intensity for the duration of the day and then ramp back down to blues in the evening, followed by a three-hour moonlight period before turning off.&lt;/span></string>
    <string name="radiant_color">Radiant Color</string>
    <string name="radiant_color_description">&lt;span style=\'font-family:HelveticaNeue;color:black;background-color:rgba(0,0,0,0);font-size:15px;text-align:justify;text-wrap:normal;word-wrap:break-word\'>Designed to display your coral, fish and invertebrates most vibrant colors, this schedule emphasizes fluorescence in your aquarium. It begins with deep blue before gradually increasing to a special blend that utilizes the full color spectrum. During the evening, this schedule will gradually ramp the coloration back to deep blue, finishing with a two-hour moonlight period before turning off.&lt;/span></string>
    <string name="traditional_reef">Traditional Reef Aquarium</string>
    <string name="traditional_reef_description">&lt;span style=\'font-family:HelveticaNeue;color:black;background-color:rgba(0,0,0,0);font-size:16px;text-align:justify;text-wrap:normal;word-wrap:break-word\'>An environment similar to that achieved with traditional aquarium lighting technologies, the schedule will begin with blue channels, before stepping up to a 12k color during mid-day. This will repeat as the lights step down for the evening. There is also a moonlight period for three hours before the lights turn off.&lt;/span></string>
    <string name="fresh_aquarium">Fresh Planted Aquarium</string>
    <string name="fresh_planted_description">&lt;span style=\'font-family:HelveticaNeue;color:black;background-color:rgba(0,0,0,0);font-size:16px;text-align:justify;text-wrap:normal;word-wrap:break-word\'>Creating a warm environment with which to show off the green and earth tone colors found in planted aquariums, &lt;span style=\'font-style:italic\'>Freshwater Planted Aquarium&lt;/span> is an artificial mode based on the 5K and 7K presets of the Radion&lt;sup style=\'font-size:8px\'>TM&lt;/sup>.&lt;/span></string>
    <string name="shallow_reef">Shallow Reef (Natural)</string>
    <string name="shallow_reef_description">&lt;span style=\'font-family:HelveticaNeue;color:black;background-color:rgba(0,0,0,0);font-size:16px;text-align:justify;text-wrap:normal;word-wrap:break-word\'>The &lt;span style=\'font-style:italic\'>Shallow Reef&lt;/span> schedule is based off spectrum measurements collected near &lt;a href=\'http://en.wikipedia.org/wiki/Sipadan\' target=\'_blank\'>Sipadan Island&lt;/a> in Malaysia. The measurements were made from sunrise to sunset just above the ocean. Use this mode if you are looking for the most natural setting for your reef environment. There is no moonlight period set for this mode.&lt;/span></string>
    <string name="deep_water_reef">Deep Water Reef (Natural)</string>
    <string name="deep_water_reef_description">&lt;span style=\'font-family:HelveticaNeue;color:black;background-color:rgba(0,0,0,0);font-size:16px;text-align:justify;text-wrap:normal;word-wrap:break-word\'>Using the same data as the &lt;span style=\'font-style:italic\'>Shallow Reef&lt;/span> schedule, the &lt;span style=\'font-style:italic\'>Deep Water Reef&lt;/span> schedule color intensities have been altered to simulate the endless blue as you descend deep into the ocean. Here, you will often find a wide variety of coral and invertebrates. There is no moonlight period set for this mode.&lt;/span></string>
    <string name="choose_template">Choose This Template</string>
    <string name="done">Done</string>
    <string name="saving_schedule">Saving Schedule to Your Profile…</string>
    <string name="resetting_radions">Resetting Radions…</string>
    <string name="error_programming">An error occurred while programming. Please try again</string>
    <string name="programming_complete_on">Programming complete on Radion</string>
    <string name="radions_programmed">Your Radions were successfully programmed.</string>
    <string name="new_schedule">New Schedule</string>
    <string name="start_day">Start Day</string>
    <string name="start_night">Start Night</string>
    <string name="daytime_intensity">Daytime Intensity</string>
    <string name="wrong_start_time_msg">The start times you have selected are not 1 hour apart. Please choose a different time and try again</string>
    <string name="wrong_start_time_title">Start Times Are Not 1 Hour Apart</string>
    <string name="error_programming_title">Error Programming Radions</string>
    <string name="scheduling_successful_title">Scheduling Successful</string>
    <string name="delete_preset_msg">Are you sure you want to delete this preset?</string>
    <string name="deleted">deleted.</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="indigo">Indigo</string>
    <string name="violet">Violet</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="dropcam">Dropcam</string>
    <string name="settings">Settings</string>
    <string name="aquariums">My Aquariums</string>
    <string name="aquarium_name">Aquarium name</string>
    <string name="next">Next</string>
    <string name="name_your_aquarium">Name your new aquarium</string>
    <string name="retry">Retry</string>
    <string name="searching_for_radions">Searching for Radions</string>
    <string name="assigning_radions">Assigning Radions…</string>
    <string name="save_group_setting">Saving group setting…</string>
    <string name="ecosmart_participation">EcoSMART Participation</string>
    <string name="override_timer">Override Timer</string>
    <string name="acclimate_timer">Acclimate Timer</string>
    <string name="lunar_phases">Lunar Phases</string>
    <string name="override_length_for_radions">Change the length of time you can override your Radion\'s program using the buttons.</string>
    <string name="override_time">Override Time (hours):</string>
    <string name="acclimation_and_intensity">Set the acclimation period and starting intensity.</string>
    <string name="acclimation_period">Acclimation Period (weeks):</string>
    <string name="starting_intensity">Starting Intensity:</string>
    <string name="lunar_phase_explanation">Lunar phases enable the Radions in the group to adjust their brightness of nighttime points, simulating a lunar cycle. The brightness is computed using the calendar date. If no nighttime points exist, lunar phases will have no effect.</string>
    <string name="light_night_mode">When enabled, lights will put pumps into night mode.</string>
    <string name="program">Program</string>
    <string name="load_template">Load from Template…</string>
    <string name="apply_overall_brightness">Applying overall brightness…</string>
    <string name="apply_depth_offset">Applying depth offset…</string>
    <string name="apply_overall_storm_probability">Applying overall storm probability…</string>
    <string name="apply_overall_cloud_probability">Applying overall cloud probability…</string>
    <string name="natural_mode_options">Natural Mode Options</string>
    <string name="weather">Weather</string>
    <string name="artificial_mode_options">Artificial Mode Options</string>
    <string name="points">Points</string>
    <string name="storm_probability">Storm Probability</string>
    <string name="cloud_probability">Cloud Probability</string>
    <string name="back">Back</string>
    <string name="custom">Custom</string>
    <string name="off">Off</string>
    <string name="individual_colors">Individual Colors</string>
    <string name="new_point">New Point</string>
    <string name="edit_point">Edit Point</string>
    <string name="enter_valid_start_time">Please enter a valid start time</string>
    <string name="colors">Colors</string>
    <string name="point_time">Point Time</string>
    <string name="preset">Preset</string>
    <string name="overall_brightness">Overall Brightness</string>
    <string name="depth_offset">Depth Offset</string>
    <string name="cloudy">Cloudy</string>
    <string name="clear">Clear</string>
    <string name="now">Now</string>
    <string name="refreshing_schedule">Refreshing…</string>
    <string name="loading">Loading…</string>
    <string name="loading_complete">Loading Complete</string>
    <string name="schedule_tooltip">Hold a point and slide to scroll.\nAdd Point: Click + at bottom.\nEdit Point: Tap highlighted point.\nDelete Point: Hold highlighted point.</string>
    <string name="device_type_missing">What type of device are you missing?</string>
    <string name="radion">Radion</string>
    <string name="add_light_via_usb">Add Light via USB</string>
    <string name="plug_usb_cable">Plug in your USB cable to a missing Radion.</string>
    <string name="waiting_for_device_connection">Waiting for device connection…</string>
    <string name="model">Model</string>
    <string name="serial_number">Serial Number</string>
    <string name="vortech">VorTech</string>
    <string name="RadionXR30w">Radion XR30w</string>
</resources>