<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BF000000"
    android:padding="10dp"
    tools:context="com.ecotechmarine.ecosmartlive_android.ScheduleNavigationOverlay">

    <Button
        android:id="@+id/program_nav_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/settings_view_bg"
        android:text="@string/program"
        android:textSize="22sp"
        android:textColor="@color/RoyalBlue"
        android:gravity="center"
        android:layout_marginBottom="1dp"
        android:padding="20dp"
        android:layout_above="@+id/template_nav_button"/>

    <Button
        android:id="@+id/template_nav_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/settings_view_bg"
        android:text="@string/load_template"
        android:textSize="22sp"
        android:textColor="@color/RoyalBlue"
        android:gravity="center"
        android:padding="20dp"
        android:layout_above="@+id/cancel_nav_button"/>

    <Button
        android:id="@+id/cancel_nav_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/settings_view_bg"
        android:text="@string/cancel"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/RoyalBlue"
        android:gravity="center"
        android:padding="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"/>

</RelativeLayout>
