<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/GhostWhite"
    tools:context=".DefaultScheduleSelectorView">

    <android.support.v4.view.ViewPager
        android:id="@+id/schedulePager"
        android:layout_width="match_parent"
        android:layout_height="430dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="430dp"
            android:orientation="vertical">

            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/high_growth"
                android:textSize="22dp"
                android:layout_marginBottom="10dp"/>

            <ImageView android:layout_height="200dp"
                android:contentDescription="One"
                android:layout_width="match_parent"
                android:src="@drawable/one"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <WebView
                android:id="@+id/schedule1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/webview_background"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="430dp"
            android:orientation="vertical">

            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radiant_color"
                android:textSize="22dp"
                android:layout_marginBottom="10dp"/>

            <ImageView android:layout_height="200dp"
                android:layout_width="match_parent"
                android:src="@drawable/two"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <WebView
                android:id="@+id/schedule2"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/webview_background"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="430dp"
            android:orientation="vertical">

            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/traditional_reef"
                android:textSize="22dp"
                android:layout_marginBottom="10dp"/>

            <ImageView android:layout_height="200dp"
                android:layout_width="match_parent"
                android:src="@drawable/three"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <WebView
                android:id="@+id/schedule3"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/webview_background"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="430dp"
            android:orientation="vertical">

            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fresh_aquarium"
                android:textSize="22dp"
                android:layout_marginBottom="10dp"/>

            <ImageView android:layout_height="200dp"
                android:layout_width="match_parent"
                android:src="@drawable/four"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <WebView
                android:id="@+id/schedule4"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/webview_background"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="430dp"
            android:orientation="vertical">

            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shallow_reef"
                android:textSize="22dp"
                android:layout_marginBottom="10dp"/>

            <ImageView android:layout_height="200dp"
                android:layout_width="match_parent"
                android:src="@drawable/five"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <WebView
                android:id="@+id/schedule5"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/webview_background"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="430dp"
            android:orientation="vertical">

            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deep_water_reef"
                android:textSize="22dp"
                android:layout_marginBottom="10dp"/>

            <ImageView android:layout_height="200dp"
                android:layout_width="match_parent"
                android:src="@drawable/six"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <WebView
                android:id="@+id/schedule6"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/webview_background"/>

        </LinearLayout>

    </android.support.v4.view.ViewPager>

    <Button
        android:id="@+id/choose_template_button"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/schedule_button"
        android:text="@string/choose_template"
        android:layout_gravity="center_horizontal|bottom" />

</FrameLayout>
